@@ -262,7 +262,7 @@ dnl Work out which manual page hierarchy scheme might be in use.
 dnl
 AC_ARG_ENABLE(mandirs,
 [  --enable-mandirs=OS	  select manual page hierarchy organization
-                          (GNU, HPUX, Solaris, IRIX)],
+                          (GNU, HPUX, IRIX, Solaris, BSD)],
 	[AC_MSG_NOTICE([Using hierarchy organization(s) $enableval])
 	 AC_DEFINE_UNQUOTED(MANDIR_LAYOUT, "$enableval",
 			    [Define to the manual page hierarchy organization(s) in use.])],
@@ -271,6 +271,7 @@ AC_ARG_ENABLE(mandirs,
 		*-hpux*)        mandirs=HPUX;;
 		*-irix*)        mandirs=IRIX;;
 		*-solaris*)     mandirs=Solaris;;
+		*-bsd*)         mandirs=BSD;;
 		*)              mandirs=;;
 	 esac
 	 if test -n "$mandirs"; then
