@@ -109,9 +109,7 @@ static void gripe_rwopen_failed (const char *database)
 			fprintf (stderr, "database %s is read-only\n",
 				 database);
 	} else {
-#ifdef MAN_DB_UPDATES
 		if (!quiet)
-#endif /* MAN_DB_UPDATES */
 			error (0, errno, _("can't update index cache %s"),
 			       database);
 	}
@@ -442,9 +440,7 @@ void update_db_time (void)
 	/* we know that this should succeed because we just updated the db! */
 	dbf = MYDBM_RWOPEN (database);
 	if (dbf == NULL) {
-#ifdef MAN_DB_UPDATES
 		if (!quiet)
-#endif /* MAN_DB_UPDATES */
 			error (0, errno, _("can't update index cache %s"),
 			       database);
 		free (content.dptr);
